fix navbar on mobile + spacing fixed on last section

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,6 +12,9 @@
   .navbar-login-links {
     margin-left: auto;
   }
+  .navbar-menu-links {
+    width: 90vw;
+  }
 }
 
 .navbar {
@@ -29,3 +32,4 @@
 .navbar-transparent {
   background: transparent;
 }
+
