--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -174,7 +174,7 @@
 
 #section-home-4 {
   background-image: linear-gradient(180deg, #F5F6FA 0%, rgba(245, 246, 250, 0.0001) 100%);
-  padding-top: 140px;
+  padding: 140px 0px;
   max-width: 1024px;
   margin: auto;
 }
@@ -182,6 +182,7 @@
 .clients-list {
   margin: 80px auto;
   display: block;
+  width: 90vw;
 }
 
 .review {
